Compilation_Racket_Mips/piton/tests/errors/invalid_type_param.py
def a(b: list): print_int(1)
